# Orn

./: .gitignore  CMakeLists.txt  README.md  output
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci-cd.yml
docs/: CONTRIBUTING.md  testing.md
examples/: AddFn.orn  CountToTen.orn  Fibo.orn  Person.orn  Rectangle.orn
lib/: stdio.orn
lib/str/: itoa.orn  str.orn
src/: main.c
src/IR/: ir.c  ir.h  optimization.c
src/backend/codeGeneration/: codegen.c  codegen.h  dataPool.c  dataPool.h  emiter.c  emiter.h  stringBuffer.c  stringBuffer.h  variableHandling.c  variableHandling.h
src/codeGeneration/: codegen.c
src/errorHandling/: errorHandling.c  errorHandling.h  errors.c
src/frontend/lexer/: lexer.c  lexer.h
src/frontend/parser/: parser.h  parserAST.c  parserCore.c  parserDeclaration.c  parserExpression.c  parserFunction.c  parserHelpers.c  parserInternal.h  parserStatement.c  parserType.c
src/frontend/semantic/: semantic.h  semanticBuiltins.c  semanticCheck.c  semanticCore.c  semanticInternal.h  semanticScope.c  semanticSymbols.c  semanticTable.c  semanticTypes.c  semanticUtils.c
src/lexer/: lexer.c
src/middleend/IR/: ir.c  ir.h  irHelpers.c  irHelpers.h  optimization.c  optimization.h
src/modules/: build.c  interface.c  interface.h
src/parser/: parser.c  parser.h  parserCore.c  parserFunction.c  parserHelpers.c  parserInternal.h  parserStatement.c
src/runtime/: runtime.s
src/semantic/: builtIns.c  semantic.h  semanticBuiltins.c  semanticHelpers.c  semanticHelpers.h  semanticTable.c  symbolTable.c  typeChecker.c  typeChecker.h
tests/frontEnd/: frontend.c  frontend.h
tests/frontEnd/basic/: operators.c
tests/frontEnd/declarations/: functions.c  variables.c
tests/frontEnd/expressions/: arithmetic.c  assignment.c  casting.c  ternary.c
tests/frontEnd/functions/: functions.c  functions.h
tests/frontEnd/integration/: programs.c
tests/frontEnd/math/: arithmetic.c  mathOrn.h
tests/frontEnd/modules/: exports.c
tests/frontEnd/statements/: controlFlow.c  scopes.c
tests/frontEnd/types/: arrays.c  pointers.c  structs.c
tests/frontEnd/variables/: casting.c  variable.h  variableDeclaration.c
